--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -50,8 +50,6 @@ CONFIG_CMD_FAT=y
 CONFIG_CMD_SF=y
 CONFIG_CMD_PART=y
 CONFIG_OF_CONTROL=y
-CONFIG_CMD_USB=y
-CONFIG_CMD_USB_MASS_STORAGE=y
 CONFIG_DEFAULT_DEVICE_TREE="sdb8000"
 CONFIG_DEFAULT_FDT_FILE="sdb8000.dtb"
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
@@ -107,7 +105,11 @@ CONFIG_NXP_TMU=y
 CONFIG_USB=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
-CONFIG_DM_USB=y
+
+# Disable Device Model USB, since it makes it hard to override OTG role detection
+CONFIG_DM_USB=n
+CONFIG_DM_USB_GADGET=n
+
 CONFIG_CI_UDC=y
 CONFIG_USB_EHCI_HCD=y
 
