sdb8000: add missing equal sign

--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -143,7 +143,7 @@ CONFIG_DR_NVRAM_ROOT_SWAP=y
 CONFIG_DR_NVRAM_BUS=0
 CONFIG_DR_NVRAM_CS=0
 CONFIG_DR_NVRAM_SPEED=50000000
-CONFIG_DR_NVRAM_MODE_0
+CONFIG_DR_NVRAM_MODE=0
 CONFIG_DR_NVRAM_SECTION_A_START=0x390000
 CONFIG_DR_NVRAM_SECTION_A_SIZE=0x010000
 CONFIG_DR_NVRAM_SECTION_B_START=0x3A0000
