--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -10,6 +10,7 @@ CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SYS_MALLOC_F_LEN=0x2000
 CONFIG_SYS_I2C_MXC_I2C1=y
 CONFIG_ENV_SIZE=0x1000
+CONFIG_ENV_OFFSET=0x400000
 CONFIG_DM_GPIO=y
 CONFIG_TARGET_SDB8000=y
 CONFIG_ARCH_MISC_INIT=y
@@ -52,6 +53,8 @@ CONFIG_CMD_PART=y
 CONFIG_OF_CONTROL=y
 CONFIG_DEFAULT_DEVICE_TREE="sdb8000"
 CONFIG_DEFAULT_FDT_FILE="sdb8000.dtb"
+CONFIG_ENV_IS_IN_MMC=y
+CONFIG_FASTBOOT_FLASH_MMC_DEV=2
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_CLK_COMPOSITE_CCF=y
 CONFIG_CLK_IMX8MM=y
