--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -67,6 +67,7 @@ CONFIG_FASTBOOT_UUU_SUPPORT=n
 CONFIG_FASTBOOT_BUF_ADDR=0x44800000
 CONFIG_FASTBOOT_BUF_SIZE=0x19000000
 CONFIG_FASTBOOT_FLASH=y
+CONFIG_FASTBOOT_FLASH_MMC=y
 
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_MXC=y
