--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -161,10 +161,12 @@ CONFIG_FLASH_MCUFIRMWARE_SUPPORT=y
 CONFIG_FSL_FASTBOOT=y
 CONFIG_FASTBOOT_LOCK=y
 CONFIG_CMD_BOOTA=y
+CONFIG_ANDROID_DYNAMIC_PARTITION=y
+CONFIG_APPEND_BOOTARGS=y
+
+# Android verified boot
 CONFIG_LIBAVB=y
 CONFIG_AVB_SUPPORT=y
-CONFIG_APPEND_BOOTARGS=y
 CONFIG_AVB_WARNING_LOGO=y
 CONFIG_AVB_WARNING_LOGO_COLS=0x320
 CONFIG_AVB_WARNING_LOGO_ROWS=0xc0
-CONFIG_ANDROID_DYNAMIC_PARTITION=y
