--- a/configs/sdb8000_defconfig
+++ b/configs/sdb8000_defconfig
@@ -146,3 +146,4 @@ CONFIG_DR_NVRAM_SECTION_A_START=0x390000
 CONFIG_DR_NVRAM_SECTION_A_SIZE=0x010000
 CONFIG_DR_NVRAM_SECTION_B_START=0x3A0000
 CONFIG_DR_NVRAM_SECTION_B_SIZE=0x010000
+CONFIG_SPL_LIBNVRAM=y
