--- a/configs/sdb8000_defconfig
+++ b/configs/sdb8000_defconfig
@@ -54,7 +54,6 @@ CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_CLK_COMPOSITE_CCF=y
 CONFIG_CLK_IMX8MM=y
 CONFIG_MXC_GPIO=y
-
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_MXC=y
 CONFIG_DM_MMC=y
@@ -74,7 +73,6 @@ CONFIG_SF_DEFAULT_CS=0
 CONFIG_SF_DEFAULT_SPEED=50000000
 CONFIG_SF_DEFAULT_MODE=0
 CONFIG_SPI_FLASH_MACRONIX=y
-
 CONFIG_PHYLIB=y
 CONFIG_PHY_ATHEROS=y
 CONFIG_DM_ETH=y
@@ -96,13 +94,12 @@ CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_DM_USB=y
+CONFIG_DM_USB_GADGET=y
 CONFIG_CI_UDC=y
 CONFIG_USB_EHCI_HCD=y
-
 CONFIG_USB_GADGET_MANUFACTURER="DATARESPONS"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0525
 CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
-
 CONFIG_SPL_USB_HOST_SUPPORT=y
 CONFIG_SPL_USB_GADGET=y
 CONFIG_SPL_USB_SDP_SUPPORT=y
@@ -110,14 +107,11 @@ CONFIG_SDP_LOADADDR=0x40400000
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_SPL_SPI_LOAD=y
-
 CONFIG_OF_LIBFDT_OVERLAY=y
-
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
 CONFIG_DM_RESET=y
 CONFIG_SYS_WHITE_ON_BLACK=y
-
 CONFIG_DR_BOARD_LATE_INIT=y
 CONFIG_DR_NVRAM=y
 CONFIG_CMD_DR_NVRAM=y
