Fix android boot

--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -23,7 +23,7 @@ CONFIG_FIT_EXTERNAL_OFFSET=0x3000
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage-8mm-lpddr4.cfg, ANDROID_SUPPORT"
-CONFIG_BOARD_LATE_INIT=y
+CONFIG_BOARD_LATE_INIT=n
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_SPL_BOARD_INIT=y
 CONFIG_SPL_SEPARATE_BSS=y
@@ -127,6 +127,7 @@ CONFIG_DR_NVRAM_SECTION_B_SIZE=0x010000
 CONFIG_SPL_LIBNVRAM=y
 
 # Android configs
+CONFIG_CMD_READ=y
 CONFIG_LZ4=y
 CONFIG_BCB_SUPPORT=y
 CONFIG_ANDROID_RECOVERY=y
@@ -147,11 +148,9 @@ CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC=y
 CONFIG_FASTBOOT=y
 CONFIG_ENV_IS_IN_MMC=y
+CONFIG_ENV_OFFSET=0x400000
 CONFIG_FASTBOOT_FLASH_MMC_DEV=2
 
 # Android verified boot
 CONFIG_LIBAVB=y
 CONFIG_AVB_SUPPORT=y
-CONFIG_AVB_WARNING_LOGO=y
-CONFIG_AVB_WARNING_LOGO_COLS=0x320
-CONFIG_AVB_WARNING_LOGO_ROWS=0xc0
