--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -23,7 +23,7 @@ CONFIG_FIT_EXTERNAL_OFFSET=0x3000
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage-8mm-lpddr4.cfg, ANDROID_SUPPORT"
-CONFIG_BOARD_LATE_INIT=n
+CONFIG_BOARD_LATE_INIT=y
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_SPL_BOARD_INIT=y
 CONFIG_SPL_SEPARATE_BSS=y
@@ -112,7 +112,7 @@ CONFIG_REGMAP=y
 CONFIG_SYSCON=y
 CONFIG_DM_RESET=y
 CONFIG_SYS_WHITE_ON_BLACK=y
-CONFIG_DR_BOARD_LATE_INIT=n
+CONFIG_DR_BOARD_LATE_INIT=y
 CONFIG_DR_NVRAM=y
 CONFIG_CMD_DR_NVRAM=y
 CONFIG_DR_NVRAM_ROOT_SWAP=n
@@ -127,19 +127,14 @@ CONFIG_DR_NVRAM_SECTION_B_SIZE=0x010000
 CONFIG_SPL_LIBNVRAM=y
 
 # Android configs
-CONFIG_CMD_READ=y
+CONFIG_CMD_BCB=y
+CONFIG_CMD_AVB=y
+CONFIG_CMD_FASTBOOT=y
+CONFIG_USB_FUNCTION_FASTBOOT=y
 CONFIG_LZ4=y
-CONFIG_BCB_SUPPORT=y
-CONFIG_ANDROID_RECOVERY=y
 CONFIG_SUPPORT_RAW_INITRD=y
-CONFIG_FLASH_MCUFIRMWARE_SUPPORT=y
-CONFIG_FSL_FASTBOOT=y
-CONFIG_FASTBOOT_LOCK=y
-CONFIG_CMD_BOOTA=y
 CONFIG_ANDROID_DYNAMIC_PARTITION=y
 CONFIG_APPEND_BOOTARGS=y
-CONFIG_USB_FUNCTION_FASTBOOT=y
-CONFIG_CMD_FASTBOOT=y
 CONFIG_ANDROID_BOOT_IMAGE=y
 CONFIG_FASTBOOT_UUU_SUPPORT=n
 CONFIG_FASTBOOT_BUF_ADDR=0x44800000
@@ -148,7 +143,6 @@ CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC=y
 CONFIG_FASTBOOT=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=2
-
 # Android verified boot
 CONFIG_LIBAVB=y
 CONFIG_AVB_SUPPORT=y
