android: add initial android_boot command

--- a/board/datarespons/sdb8000/Makefile
+++ b/board/datarespons/sdb8000/Makefile
@@ -8,4 +8,5 @@ ifdef CONFIG_SPL_BUILD
 obj-y += spl.o lpddr4_timing.o dram_timing_spi.o
 else
 obj-y += sdb8000.o
+obj-$(CONFIG_ANDROID_SUPPORT) += android_boot.o
 endif
