--- a/configs/sdb8000_android_defconfig
+++ b/configs/sdb8000_android_defconfig
@@ -129,20 +129,21 @@ CONFIG_SPL_LIBNVRAM=y
 # Android configs
 CONFIG_CMD_BCB=y
 CONFIG_CMD_AVB=y
-CONFIG_CMD_FASTBOOT=y
-CONFIG_USB_FUNCTION_FASTBOOT=y
-CONFIG_LZ4=y
+CONFIG_LIBAVB=y
+CONFIG_AVB_VERIFY=y
+CONFIG_AVB_SUPPORT=y
 CONFIG_SUPPORT_RAW_INITRD=y
 CONFIG_ANDROID_DYNAMIC_PARTITION=y
 CONFIG_APPEND_BOOTARGS=y
 CONFIG_ANDROID_BOOT_IMAGE=y
+CONFIG_ANDROID_AB=y
+CONFIG_FASTBOOT=y
+CONFIG_CMD_FASTBOOT=y
 CONFIG_FASTBOOT_UUU_SUPPORT=n
 CONFIG_FASTBOOT_BUF_ADDR=0x44800000
 CONFIG_FASTBOOT_BUF_SIZE=0x19000000
 CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC=y
-CONFIG_FASTBOOT=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=2
-# Android verified boot
-CONFIG_LIBAVB=y
-CONFIG_AVB_SUPPORT=y
+CONFIG_USB_FUNCTION_FASTBOOT=y
+CONFIG_FASTBOOT_USB_DEV=0
